# aigraphcodescan

./: LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: auto-Tag.yml  auto-tag.yaml  auto-tag.yml  publish-to-pipy.yml  publish-to-pypi.yml
aigraphcodescan/src/aigraphcodescan/: __main__.py  app.py
aigraphcodescan/src/aigraphcodescan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
