
[metadata]
name = aigraphcodescan
version = 1.1.6
author = Marcin Kozlowski
author_email = marcinguy@gmail.com
description = A tool for security review of code using graph-based analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = AGPL 3.0
url = https://github.com/tcosolutions/aigraphcodescan
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = aigraphcodescan/src

[options.packages.find]
where = src

python_requires = >=3.6
install_requires =
    neo4j >= 4.0.0
    fast_graphrag >= 0.0.4
    logging
    argparse

[options.entry_points]
console_scripts =
    aigraphcodescan = aigraphcodescan.__main__:main
